--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2419,6 +2419,9 @@ table.auTable tr td {
     left: inherit;
     right: -45px;
 }
+.guide_slider {
+    width: 848px !important;
+}
 .basicWd {
     width:760px;
     margin: 0 auto;
@@ -2637,20 +2640,28 @@ table.auTable tr td {
 
 .w-gpgosi-Guide {letter-spacing: 0}
 
-.examInfoGu4 {padding: 30px 40px}
+.examInfoGu4 {padding: 30px 45px 45px}
 .examInfoGu4 .hTy {font-family: "NanumGothic-Bold", "Nanum Gothic", "나눔고딕", "sans-serif"}
-.examInfoGu4 .hTy.txt-gray {font-size: 14px; font-weight:bold; color: #555; line-height: 18px}
-.examInfoGu4 .hTy.txt-red {font-size: 14px; font-weight:bold; color: #d52b2b; line-height: 18px}
-.examInfoGu4 .hTy4 {margin: 0 0 20px; font-size:16px; font-weight:bold; color: #026f61; line-height: 30px}
+.examInfoGu4 .hTy4 {font-size:16px; font-weight:bold; color: #3e4831; line-height: 30px; border-bottom: 1px solid #cbcbcb;}
 
-.examInfoGu4 .hTy5 {margin: 0 0 15px}
-.examInfoGu4 .hTy5 span {font-size: 13px}
-
-.examInfoGu4 .hTy6.center {margin: 15px 60px 0; font-size:13px}
-.examInfoGu4 .hTy6.right {margin: 0 0 5px; text-align: right;}
-.examInfoGu4 .hTy6.right span {font-size: 13px}
-.examInfoGu4 .hTy6.left span {margin: 5px 0 0; text-align: left; font-size: 12px}
-
+/*가이드 텍스트 및 테이블 Css*/
+.gd_txt {text-align:left; margin:auto;  font-size:13px;  font-weight:bold; color:#666; letter-spacing:-1px; line-height:40px; overflow:auto}
+.gd_txt h2 {border-top: 1px solid #5c6068; border-bottom: 1px solid #5c6068; background: #73806c; height: 40px; font-size:15px; font-weight:bold; color:#fff; clear:both; padding-left: 10px; margin-top:40px; line-height: 38px;}
+.gd_txt ul {margin:15px 0 0;}
+.gd_txt ul li:first-child {padding-top: 0;}
+.gd_txt ul li {line-height:21px; color: #555; padding: 20px 12px 0;}
+.gd_txt ul li span {vertical-align: baseline;}
+.gd_txt_c {width:100%; max-width:780px; text-align:center;}
+.gd_txt_big {font-size:48px; color:#38442a; font-weight:800; letter-spacing:-6px; font-family:Nanum Gothic, "맑은 고딕",Malgun Gothic,"돋움",Dotum,Arial;}
+.gd_txt_small {font-size:24px; color:#588338;  font-weight:400; letter-spacing:-4px; padding-top:20px; font-family:Nanum Gothic, "맑은 고딕",Malgun Gothic,"돋움",Dotum,Arial;}
+.gd_table {width:760px; margin:auto; border-left:1px solid #ccc; background-color:#fff;border-top:1px solid #ccc; font-family:Nanum Gothic, "맑은 고딕",Malgun Gothic,"돋움",Dotum,Arial; }
+.gd_table th {padding:7px 0; font-weight:bold; color:#222; text-align:center; letter-spacing:-1px; background:#eceff1; border-right:1px solid #ccc;border-bottom:1px solid #ccc;}
+.gd_table td {padding:7px 0; text-align:center; border-bottom:1px solid #ccc; border-right:1px solid #ccc; letter-spacing:0px; color:#585858; font-size:12px;  line-height:18px;}
+.gd_table .td_l {padding:7px; padding-left:10px;  text-align:left; border-bottom:1px solid #ccc; border-right:1px solid #ccc; letter-spacing:18px; font-size:12px;letter-spacing:-1px; color:#585858;}
+.gd_table .td_13 {background:#f9f9f9; font-size:13px; font-weight:bold; color:#222; text-align:center; letter-spacing:-0.5px;}
+.gd_txt12 {font-size:12px; color:#d8482d; letter-spacing:-1px; }
+.gd_txt13 {font-size:13px; color:#9b402f; letter-spacing:-1px;}
+    
 
 
 /*********************************************     CONTAINER PAGE     *********************************************/
@@ -4501,10 +4512,6 @@ form .LeclistTable .evtTable tr td a.w-del {
 }
 
 
-
-
-
-
 /* subContainer : Content : 강의목차 : LecViewTable */
 .LecViewTable .listTable {
     clear: both;
@@ -4683,6 +4690,48 @@ form .LeclistTable .evtTable tr td a.w-del {
     color: #fff;
     text-align: center;
     cursor: pointer;
+}
+
+/* subContainer : Content : 교수선택 */
+.sbjTit {
+    margin: 15px 0 10px;
+    padding-left: 20px;
+    border-top:1px solid #5c6068; 
+    border-bottom:1px solid #5c6068;
+    height: 40px;
+    font-size:14px; 
+    font-weight:bold; 
+    color: #fff; 
+    line-height: 38px;
+    background: #6c7380;
+    clear: both;
+}
+.sbjProf {
+    overflow: hidden;
+    margin: 10px 10px 5px;
+}
+.sbjProf li:first-child {
+    margin-left: 0;
+}
+.sbjProf li {
+    position: relative;
+    float: left;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #edeeef;
+    padding: 5px;
+}
+.sbjProf li.nth {
+    margin-left: 0;
+}
+.sbjProf li input[type="checkbox"] {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+.sbjProf li .prof-Name {
+    font-size: 14px;
+    margin: 5px 0 10px 5px;
 }
 
 /* subContainer : Content : 수강후기 */
