--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4696,19 +4696,18 @@ form .LeclistTable .evtTable tr td a.w-del {
 .sbjTit {
     margin: 15px 0 10px;
     padding-left: 20px;
-    border-top:1px solid #5c6068; 
-    border-bottom:1px solid #5c6068;
     height: 40px;
     font-size:14px; 
     font-weight:bold; 
-    color: #fff; 
+    color: #3a3a3a; 
     line-height: 38px;
-    background: #6c7380;
+    background: #f4f5f6;
     clear: both;
 }
 .sbjProf {
     overflow: hidden;
-    margin: 10px 10px 5px;
+    margin: 15px 15px 0;
+    width: 800px;
 }
 .sbjProf li:first-child {
     margin-left: 0;
@@ -4716,18 +4715,21 @@ form .LeclistTable .evtTable tr td a.w-del {
 .sbjProf li {
     position: relative;
     float: left;
-    margin-left: 10px;
-    margin-bottom: 10px;
+    margin-left: 15px;
+    margin-bottom: 15px;
     border: 1px solid #edeeef;
-    padding: 5px;
+    padding: 10px;
 }
 .sbjProf li.nth {
     margin-left: 0;
 }
 .sbjProf li input[type="checkbox"] {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 15px;
+    left: 15px;
+}
+.sbjProf li img {
+    background: #f4f3f3;
 }
 .sbjProf li .prof-Name {
     font-size: 14px;
