기간제패키지페이지 수정 업로드5

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1184,6 +1184,12 @@ table.auTable tr td {
 #SettingForm .Layer-Btn button.cf-Btn span {
     font-size: 15px;
 }
+.Gnb-md #SettingForm {
+    top: -255px;
+}
+.Gnb-sm #SettingForm {
+    top: -60px;
+}
 
 /* Footer */
 #Footer {
