공무원가이드 수정 업로드2

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -943,7 +943,7 @@ select[disabled] {
   background: #636363;
 }
 .bg-white {
-  background: #fff;
+  background: #fff !important;
 }
 .bg-light-white {
   background: #f9f9f9;
