--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2676,23 +2676,25 @@ ul.dot li {
 .examInfoGu4 .hTy {font-family: "NanumGothic-Bold", "Nanum Gothic", "나눔고딕", "sans-serif"}
 .examInfoGu4 .hTy4 {font-size:16px; font-weight:bold; color: #3e4831; line-height: 30px; border-bottom: 1px solid #cbcbcb;}
 
+
+
 /*가이드 텍스트 및 테이블 Css*/
-.gd_txt {text-align:left; margin:auto;  font-size:13px;  font-weight:bold; color:#666; letter-spacing:-1px; line-height:40px; overflow:auto}
-.gd_txt h2 {border-top: 1px solid #5c6068; border-bottom: 1px solid #5c6068; background: #73806c; height: 40px; font-size:15px; font-weight:bold; color:#fff; clear:both; padding-left: 10px; margin-top:40px; line-height: 38px;}
+.gd_txt {text-align:left; margin:auto;  font-size:13px; color:#666; letter-spacing:-1px; line-height:40px; overflow:auto}
+.gd_txt h2 {font-family: "NanumGothic-Bold", "Nanum Gothic", "나눔고딕", "sans-serif"; border-top: 1px solid #5c6068; border-bottom: 1px solid #5c6068; background: #73806c; height: 40px; font-size:15px; font-weight:bold; color:#fff; clear:both; padding-left: 10px; margin-top:40px; line-height: 38px; letter-spacing:0}
 .gd_txt ul {margin:15px 0 0;}
 .gd_txt ul li:first-child {padding-top: 0;}
-.gd_txt ul li {line-height:21px; color: #555; padding: 20px 12px 0;}
+.gd_txt ul li {font-family: "굴림", "Gulim", "돋움", "Dotum", "Helvetica", "Apple SD Gothic Neo", "sans-serif"; font-size: 12px; font-weight:300; line-height:21px; color: #555; padding: 20px 12px 0; letter-spacing: 0;}
 .gd_txt ul li span {vertical-align: baseline;}
 .gd_txt_c {width:100%; max-width:780px; text-align:center;}
 .gd_txt_big {font-size:48px; color:#38442a; font-weight:800; letter-spacing:-6px; font-family:Nanum Gothic, "맑은 고딕",Malgun Gothic,"돋움",Dotum,Arial;}
 .gd_txt_small {font-size:24px; color:#588338;  font-weight:400; letter-spacing:-4px; padding-top:20px; font-family:Nanum Gothic, "맑은 고딕",Malgun Gothic,"돋움",Dotum,Arial;}
-.gd_table {width:760px; margin:auto; border-left:1px solid #ccc; background-color:#fff;border-top:1px solid #ccc; font-family:Nanum Gothic, "맑은 고딕",Malgun Gothic,"돋움",Dotum,Arial; }
-.gd_table th {padding:7px 0; font-weight:bold; color:#222; text-align:center; letter-spacing:-1px; background:#eceff1; border-right:1px solid #ccc;border-bottom:1px solid #ccc;}
-.gd_table td {padding:7px 0; text-align:center; border-bottom:1px solid #ccc; border-right:1px solid #ccc; letter-spacing:0px; color:#585858; font-size:12px;  line-height:18px;}
-.gd_table .td_l {padding:7px; padding-left:10px;  text-align:left; border-bottom:1px solid #ccc; border-right:1px solid #ccc; letter-spacing:18px; font-size:12px;letter-spacing:-1px; color:#585858;}
-.gd_table .td_13 {background:#f9f9f9; font-size:13px; font-weight:bold; color:#222; text-align:center; letter-spacing:-0.5px;}
-.gd_txt12 {font-size:12px; color:#d8482d; letter-spacing:-1px; }
-.gd_txt13 {font-size:13px; color:#9b402f; letter-spacing:-1px;}
+.gd_table {font-family: "굴림", "Gulim", "돋움", "Dotum", "Helvetica", "Apple SD Gothic Neo", "sans-serif"; width:760px; margin:auto; border-left:1px solid #ccc; background-color:#fff;border-top:1px solid #ccc;}
+.gd_table th {padding:7px 0; color:#222; text-align:center; background:#eceff1; border-right:1px solid #ccc;border-bottom:1px solid #ccc;}
+.gd_table td {padding:7px 0; text-align:center; border-bottom:1px solid #ccc; border-right:1px solid #ccc; letter-spacing:0px; color:#585858; font-size:12px; line-height:18px;}
+.gd_table .td_13 {background: #efefef}
+.gd_table .td_14 {background: #f9f9f9}
+.gd_txt12 {font-size:12px; color:#d8482d}
+.gd_txt13 {font-size:13px; color:#9b402f}
     
 
 
